2.0.3 clipped pic and fixed it for large displays

--- a/index.css
+++ b/index.css
@@ -154,50 +154,6 @@ h1 {
     display: flow-root;
 }
 
-.project-box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    /* width: 80vw; */
-}
-
-.project-box .container {
-    display: flex;
-    align-items: center;
-    gap: 50px;
-}
-
-.arrow {
-    width: 80px;
-    height: 80px;
-    cursor: pointer;   
-}
-
-.frame {
-    width: 60vw;
-    height: 70vh;
-    overflow: hidden;
-    box-shadow: -1px 1px 10px rgba(0, 0, 0, 0.5);
-}
-
-.slider {
-    display: flex;
-    transition: all 0.7s ease;
-}
-
-.s-img {
-    width: 1000px;
-    height: 500px;
-    object-fit: cover;
-    cursor: pointer;
-}
-
-.s-img:hover{
-    transform: scale(1.2);
-    transition: transform 0.3s ease-in-out;
-}
-
 .unselectable {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -219,10 +175,11 @@ h1 {
 }
 
 .img-block {
-    display: flex;
+    clip-path: polygon(0 0, 100% 0%, calc(100% - 20%) 100%, 0% 100%);
+    shape-outside: polygon(0 0, 100% 0%, calc(100% - 20%) 100%, 0% 100%);
     max-width: 500px;
-    max-height: 500px;
-    margin: 13px 13px;
+    max-height: 520px;
+    margin-right: 10px;
 }
 
 .left {
@@ -230,13 +187,13 @@ h1 {
     /* margin-right: 2rem; */
 }
 
-.img-block~p {
+.desc p {
     line-height: 1.5rem;
     font-size: 1.1rem;
     font-weight: 500;
     color: #333;
     text-align: justify;
-    margin: 16px 16px 0;
+    margin: 16px 16px 10px;
 }
 
 .intro-sec a, .credits a {
@@ -282,17 +239,19 @@ a:hover:not(nav a) {
 
 .credits {
     height: max-content;
-    line-height: 28px;
+    line-height: 25px;
     text-align: center;
     padding: 0.2rem 0;
     background-color: var(--primary-light);
     box-shadow: 0 4px 12px 12px rgb(193, 230, 230); 
     /* box-shadow: 0 2px 30px #9cffff;  */
     font-weight: 500;
+    font-size: 14px;
 }
 
 .container-2 {
     display: flex;
+    justify-content:space-evenly;
     /* justify-content: space-evenly; 
     align-items: center; */
     margin: 3rem auto;
@@ -337,14 +296,14 @@ a:hover:not(nav a) {
     padding-top: 15px;
     border-top: 1px solid var(--primary);
 }
-/* .no-scroll {
-    overflow: hidden;
-} */
 
-@media(max-width: 800px) {
+
+@media (max-width: 800px) {
+
     .hideonmobile {
         display: none;
     }
+    
     .menu-btn {
         display: inline-block;
     }
@@ -366,7 +325,7 @@ a:hover:not(nav a) {
         font-size: 20px;
     }
 
-    .img-block~p {
+    .desc p {
         font-size: 15px;
     }
 
@@ -377,15 +336,6 @@ a:hover:not(nav a) {
 
     .clear {
         clear: right;
-    }
-
-    .project-box .container {
-        gap: 20px;
-    }
-
-    .arrow {
-        width: 40px;
-        height: 40px;
     }
 
     .ca-img {
@@ -421,4 +371,21 @@ a:hover:not(nav a) {
         height: 250px;
     }
 
+}
+
+@media (min-width: 1740px) {
+
+    .desc p {
+        font-size: 1.7rem;
+        line-height: 2.5rem;
+    }
+
+    .credits {
+        font-size: 1.7rem;
+        line-height: 45px;
+    }
+
+    nav {
+        font-size: 1.7rem;
+    }
 }
